Add small info text under preview link URL

--- a/templates/preview_link_widget.twig
+++ b/templates/preview_link_widget.twig
@@ -15,6 +15,7 @@
                             </button>
                         </span>
                     </div>
+                    <small id="emailHelp" class="form-text text-muted">Share this link with anyone to preview an unpublished item</small>
                 </div>
             </div>
         </div>
